fix: page overflow on mobile, caused by nav menu

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -70,6 +70,12 @@
       position: relative;
     }
   }
+  & > .mainNav {
+    overflow-y: hidden;
+    @include desktop() {
+      overflow-y: initial;
+    }
+  }
 }
 
 .brand {
